--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "install-server": "npm install",
-    "start-server": "node server.js",
+    "install-server": "npm install && cd client && npm install",
+    "start-server": "node server.js && cd client && npm run build",
     "install-client": "cd client && npm install",
     "build-client": "cd client && npm run build",
     "start-client": "cd client && npm run start"
