--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
+    "number-to-words": "^1.2.4",
     "passport": "^0.7.0",
     "puppeteer": "^22.6.1",
     "uuid": "^9.0.1"
